v 2.0 set pom.xml-added loombok,gson,assertJ,junit and plugins